--- a/animate.css
+++ b/animate.css
@@ -1,4 +1,45 @@
-/* Setting Initial Positons and Sizes*/
+/*Animations*/
+@keyframes slideDown {
+  from {
+   -webkit-transform: translateY(-300px);
+           transform: translateY(-300px);
+  }
+  to {
+   -webkit-transform: translateY(0px);
+           transform: translateY(0px);
+  }
+}
+@keyframes slideRight{
+  from {
+    transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+  }
+  to{
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+  }
+}
+@keyframes slideUp {
+  from {
+   -webkit-transform: translateY(100%);
+           transform: translateY(100%);
+  }
+  to {
+   -webkit-transform: translateY(0px);
+           transform: translateY(0px);
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    visibility: hidden;
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+/* Setting Positons and Sizes*/
 
 .shadow, .mask-left, .mask-right, .circle-left, .circle-right{
 
@@ -8,26 +49,31 @@
   margin-top: -0.05%;
   margin-left: 13.90%;
   height: 50%;
+  animation: fadeIn 1s;
 }
 
 .circle-left{
   margin-left: .25%;
   height: 50%;
+  animation: fadeIn 1s;
 }
 
 .mask-right{
   margin-top: 1.25%;
   margin-left: 13.10%;
-  height: 45%
+  height: 45%;
+  animation: slideDown 0.65s ease-out;
 }
 .mask-left{
   margin-top: 1.25%;
   margin-left: 4.6%;
-  height: 45%
+  height: 45%;
+  animation: slideUp 0.65s ease-out ;
 }
 
 .shadow{
   height:50%;
   margin-top: 0.5%;
   margin-left: 1.5%;
+  animation: slideRight 1s, fadeIn 1s;
 }
